--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>fanfic</h1>
 
-O que é franfic
-<p>As fanfics são histórias ficcionais
+O que é fanfic?
+<p>As fanfics são histórias <strong>ficcionais</strong>
 criadas por fãs, que se baseiam em 
 diversos personagens e histórias de 
 filmes, livros, séries, histórias em
@@ -10,30 +10,30 @@ animes, grupos musicais, celebridades
 etc.</p>
 
 <p>A palavra Fanfic é a abreviação da
-expressão inglesa fanfiction, que
-significa “ficção de fã” na tradução
+expressão inglesa <strong> fanfiction</strong>, que
+significa <strong>“ficção de fã”</strong> na tradução
 literal para a língua portuguesa.</p>
 
-<p>Os fanfics são muito utilizados por pessoas que são muito fãs de uma história e 
-querem dar continuidade ao enredo ou personagens preferidos, com
+<p>Os fanfics são muito utilizados por pessoas que são muito <strong>fãs</strong> de uma história e 
+querem dar <strong>continuidade</strong> ao enredo ou personagens preferidos, com
 interações, contextos ou até personagens diferentes.</p>
 
-<p>É importante lembrar que os criadores das fanfics não têm a intenção de ferir
-os direitos autorais ou de obter lucros com as suas produções.</p>
+<p>É importante lembrar que os criadores das fanfics <strong>não têm a intenção de ferir
+os direitos autorais ou de obter lucros com as suas produções</strong></p>
 
 <h2>como funciona o fanfic na prática:</h2>
 
-<p>Uma pessoa muito fã da saga de Harry Potter pode criar uma fanfic da história.
+<p>Uma pessoa muito fã da saga de Harry Potter <strong>criar uma fanfic da histórias</strong> .
 Ou seja, utilizar os personagens existentes, formas diferentes, seja no universo criado pela autora ou em 
 qualquer outra época, mundo e contexto que preferir.<p
 
-<p>De forma prática, o fã pode fazer interações diferentes entre os personagens, formar pares e situações que 
-não existem na série original, entre outros contextos. Algumas fanfics também adicionam novos personagens 
+<p>De forma prática, o fã pode fazer <strong>ações diferentes entre os personagens</strong>, formar pares e situações que 
+<strong>não existem</strong> na série original, entre outros contextos. Algumas fanfics também <strong>adicionam</strong> novos personagens 
 às histórias existentes.</p>
 
-<p>Normalmente, as fanfics são publicadas em fóruns ou sites específicos para este tipo de conteúdo na internet.</p>
+<p>Normalmente, as fanfics são publicadas em ,<strong>fóruns</strong> ou sites específicos para este tipo de conteúdo na internet.</p>
 
-<p>Os animes e mangás são um dos principais produtos que atraem a produção de fanfics entre os jovens e
+<p>Os animes e mangás são um dos principais produtos que <strong>atraem</strong> a produção de fanfics entre os jovens e
 adolescentes, principalmente.</p>
 
 <p>A popularização das fanfics ocorreu com o advento e consolidação da internet, mas a sua origem está em meados
